<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Sergio Aragonés. All rights reserved.
  ~ Created by Sergio Aragonés on 29/5/2021
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>

    <!--  ConstraintLayout for better performance  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding16dp"
        tools:context=".screens.shoedetail.ShoeDetailFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutShoeName"
            style="@style/Widget.ShoeStore.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextShoeName"
                style="@style/Widget.ShoeStore.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name"
                android:text="@={shoe.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutShoeCompany"
            style="@style/Widget.ShoeStore.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginEnd="@dimen/margin4dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutShoeSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutShoeName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextShoeCompany"
                style="@style/Widget.ShoeStore.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_company"
                android:text="@={shoe.company}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutShoeSize"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutShoeCompany"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutShoeCompany"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutShoeCompany">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewShoeSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutShoeDescription"
            style="@style/Widget.ShoeStore.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutShoeCompany">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextShoeDescription"
                style="@style/Widget.ShoeStore.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_description"
                android:text="@={shoe.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  LinearLayout for simple button alignment  -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutShoeDescription">

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.ShoeStore.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/buttonSave"
                style="@style/Widget.ShoeStore.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin16dp"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>